# kameret

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  vcpkg.json
adapters/mediapipe/: CMakeLists.txt
adapters/mediapipe/include/: mediapipe_estimator.hpp  stub_estimator.hpp
apps/demo/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/eyetracker/: gaze_math.hpp  hal.hpp  one_euro_filter.hpp  pipeline.hpp  types.hpp
core/src/: placeholder.cpp
scripts/: build_linux_arm64.sh  build_linux_x86.sh  build_windows.ps1
